--- a/sass/partials/_main-header.scss
+++ b/sass/partials/_main-header.scss
@@ -1,100 +1,103 @@
 .main-header {
+  height: 100%;
+  width: 100%;
+  background-color: $red;
+  position: fixed;
+  transform: translateX(100%);
+  right: 5rem;
+  transition: 1s;
+  transition-delay: .3s;
+
+  &-animation {
     height: 100%;
     width: 100%;
-    background-color: $red;
     position: fixed;
     transform: translateX(100%);
     right: 5rem;
-    transition: 1s;
-    transition-delay: .3s;
+  }
 
-    &-animation {
-      height: 100%;
-      width: 100%;
-      position: fixed;
-      transform: translateX(100%);
-      right: 5rem;
+
+  &-menu-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80px;
+    height: 80px;
+    cursor: pointer;
+    transition: .5s;
+
+    &:hover {
+      background-color: $light-blue;
     }
 
 
-    &-menu-icon {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 80px;
-        height: 80px;
-        cursor: pointer;
+    &-hamburger {
+      width: 40px;
+      height: 5px;
+      position: relative;
+      background-color: $dark-blue;
+      transition: .5s;
+
+      &::before,
+      &::after {
+        content: '';
+        position: absolute;
+        width: 40px;
+        height: 5px;
+        background-color: $dark-blue;
         transition: .5s;
+      }
 
-        &:hover {
-            background-color: $light-blue;
-        }
+      &::before {
+        top: -12px;
+      }
 
-
-        &-hamburger {
-            width: 40px;
-            height: 5px;
-            position: relative;
-            background-color: $dark-blue;
-            transition: .5s;
-
-            &::before,
-            &::after {
-                content: '';
-                position: absolute;
-                width: 40px;
-                height: 5px;
-                background-color: $dark-blue;
-                transition: .5s;
-            }
-
-            &::before {
-                top: -12px;
-            }
-
-            &::after {
-                top: 12px;
-            }
-        }
+      &::after {
+        top: 12px;
+      }
     }
+  }
+}
+
+.animation {
+  height: 100%;
+  width: 100%;
+  position: fixed;
+  transform: translateX(100%);
+  right: 5rem;
 }
 
 
-
-// .menu-open {
-//     background-color: $light-blue;
-// }
-
 .menu-open .main-header-menu-icon-hamburger {
-    background-color: rgba(0, 0, 0, 0);
+  background-color: rgba(0, 0, 0, 0);
 }
 
 
 .menu-open .main-header-menu-icon-hamburger::before {
-    top: 0;
-    transform: rotate(45deg);
+  top: 0;
+  transform: rotate(45deg);
 }
 
 
 .menu-open .main-header-menu-icon-hamburger::after {
-    top: 0;
-    transform: rotate(135deg);
+  top: 0;
+  transform: rotate(135deg);
 }
 
 
 .logo-header {
-    color: $dark-blue;
-    font-size: 1.3rem;
-    font-weight: 700;
-    line-height: 1.1rem;
-    //   letter-spacing: .7px;
-    transform: rotate(-90deg);
-    display: block;
-    bottom: 0;
-    left: 2.2rem;
-    position: absolute;
-    width: 10px;
-    margin-bottom: 1rem;
+  color: $dark-blue;
+  font-size: 1.3rem;
+  font-weight: 700;
+  line-height: 1.1rem;
+  //   letter-spacing: .7px;
+  transform: rotate(-90deg);
+  display: block;
+  bottom: 0;
+  left: 2.2rem;
+  position: absolute;
+  width: 10px;
+  margin-bottom: 1rem;
 }
 
 .menu-open .main-header {
