--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,7 +1,5 @@
 @import "vendor";
-
 @import "modules/colors";
-
 @import "partials/base";
-@import "partials/main-header"
-@import "partials/main-content"
+@import "partials/main-header";
+@import "partials/main-content";
