--- a/sass/partials/_base.scss
+++ b/sass/partials/_base.scss
@@ -6,7 +6,7 @@
 
 
 body {
-  background-color: $light-blue;
+  background-color: $dark-blue;
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
