--- a/sass/partials/_main-content.scss
+++ b/sass/partials/_main-content.scss
@@ -5,6 +5,9 @@
   justify-content: center;
   align-items: flex-start;
   flex-direction: column;
+  background: url(/images/galaxy-listing-freebie.svg) no-repeat 50% 50%;
+  background-size: cover;
+  // background-color: rgba(0, 0, 0, 0.3);
 
 
   &-text-one {
@@ -14,8 +17,15 @@
     // opacity: 0;
     animation: show-text 0.0001s linear forwards;
     animation-delay: 1.4s;
-    border: solid 1px white;
+
+    &::after {
+      content: '';
+      width: 100%;
+      height: 100%;
+      background-color: black;
+    }
   }
+
 
   &-text-two {
     margin-top: .8rem;
