bg stil doing goddamn text appear

--- a/sass/partials/_main-content.scss
+++ b/sass/partials/_main-content.scss
@@ -6,7 +6,7 @@
   align-items: flex-start;
   flex-direction: column;
   background: url(/images/galaxy-listing-freebie.svg) no-repeat 50% 50%;
-  background-size: cover;
+  background-size: 125%;
   // background-color: rgba(0, 0, 0, 0.3);
 
 
