--- a/sass/partials/_main-content.scss
+++ b/sass/partials/_main-content.scss
@@ -13,17 +13,20 @@
   &-text-one {
     margin: 0;
     font-size: 4rem;
+    position: relative;
     color: #fff;
     // opacity: 0;
     animation: show-text 0.0001s linear forwards;
     animation-delay: 1.4s;
 
-    &::after {
-      content: '';
-      width: 100%;
-      height: 100%;
-      background-color: #fff;
-    }
+    // &::after {
+    //   content: '';
+    //   position: absolute;
+    //   left: 0;
+    //   width: 100%;
+    //   height: 100%;
+    //   background-color: #fff;
+    // }
   }
 
 
