--- a/sass/partials/_main-header.scss
+++ b/sass/partials/_main-header.scss
@@ -5,6 +5,7 @@
   position: fixed;
   transform: translateX(100%);
   right: 5rem;
+  z-index: 1;
   transition: 1s;
   transition-delay: .3s;
 
@@ -65,6 +66,7 @@
   position: fixed;
   transform: translateX(100%);
   right: 5rem;
+  z-index: 1;
 }
 
 
