--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -4,5 +4,9 @@ block header
   include components/header
 
 block main
-  section
+  section.main-content-hero
     include components/hero
+
+block about
+  section.about-me
+    include components/aboutme
